--- a/src/utils/projectGallery.json
+++ b/src/utils/projectGallery.json
@@ -5,7 +5,7 @@
 "description":"",
 "id": 1,
 "gitHub": "hhttps://github.com/MaFer74/REACT-Portfolio",
-"deployedUrl": "",
+"deployedUrl": "https://mafer74.github.io/REACT-Portfolio/",
 "styling": "project1"
 },
 
