removed an extra letter by mistake

--- a/src/utils/projectGallery.json
+++ b/src/utils/projectGallery.json
@@ -4,7 +4,7 @@
 "image": "",
 "description":"",
 "id": 1,
-"gitHub": "hhttps://github.com/MaFer74/REACT-Portfolio",
+"gitHub": "https://github.com/MaFer74/REACT-Portfolio",
 "deployedUrl": "https://mafer74.github.io/REACT-Portfolio/",
 "styling": "project1"
 },
